修改了index.html并添加一个product.html文件

--- a/product.html
+++ b/product.html
@@ -5,12 +5,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<p>新的项目启动。。。</p>
-	<ul>
-		<li>111</li>
-		<li>222</li>
-		<li>333</li>
-		<li>444</li>
-	</ul>
+	<p>产品页1111</p>
 </body>
 </html>
