--- a/product.html
+++ b/product.html
@@ -8,19 +8,12 @@
 	<p>产品页1111</p>
 	<p>1111</p>
 	<p>222222</p>
-	<p>mmmmm</p>
-	<p>9999999</p>
-	<p>我在master分支上</p>
-	<ul>
-		<li>list1</li>
-		<li>这是在lisi上改的东西</li>
-	
-	</ul>
-	
+
 	
 	<p>我在lisi分支上</p>
 	<p>主要写文件上传模块</p>
 	<p>111111111111</p>
 	<p>2222222</p>
+	<p>我在dev上11111111111,hello dev</p>
 </body>
 </html>
