--- a/fruitShopping/index.html
+++ b/fruitShopping/index.html
@@ -5,11 +5,14 @@
 	<title>Document</title>
 </head>
 <body>
-	<p>产品页1111</p>
-	
-	<p>aaaaaa</p>
+	<p>新的项目启动。。。</p>
 	<ul>
-		<li>1111111</li>
+		<li>111</li>
+		<li>222</li>
+		<li>333</li>
+		<li>444</li>
+		<li>555</li>
+		<li>6666</li>
 	</ul>
 </body>
 </html>
